--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       }
       .thermometer, .order, .social {
         /* line-height to vertically center: http://phrogz.net/css/vertical-align/indexl.html */
-        .height: 40px;
-        .line-height: 40px;
+        height: 40px;
+        line-height: 40px;
       }
       div.row {
         border: 1px solid;
