--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
       /* Main body and headings  */
       body {
         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-        text-align: center;      
       }
       .heading, .subheading {
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
@@ -159,6 +158,12 @@
                   <h3>1000</h3> <p>backers</p>
                 </div>
               </div>
+              <div class="span4">
+                <div class="linediv-c">
+                  <h3>$6000</h3> <p>of $10,000</p>
+                </div>
+              </div>
+              
               <div class="span4">
                 <div class="linediv-r">
                   <h3>10</h3> <p>days left</p>
