--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <style type="text/css">
 
       /* Large Desktop */
-      @media (min0width: 980px) {
+      @media (min-width: 980px) {
         body {
           padding-top: 60px;
         }
@@ -71,7 +71,7 @@
         padding: 3% 0%;
       }
       .video, .thermometer, .order, .social, .statistics {
-        text-align: center:
+        text-align: center;
       }
       .statistics h3, .statistics p {
         color: white;
@@ -83,7 +83,7 @@
         padding-bottom: 2.5%;
         text-align: justify;
       }
-      .assset {
+      .asset {
         padding: 2.5% 0%;
       }
       .footer {
@@ -100,7 +100,7 @@
     </style>
   </head>
   <body>
-
+<div>
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -179,7 +179,7 @@
               <div class="bar bar-warning" style="width: 40%;"></div>
           </div>
         </div>
-        <div class="span6 offest3 order">
+        <div class="span6 offset3 order">
           <!-- Standard Bootstrap button. -->
           <!-- http://twitter.github.io/bootstrap/components.html#buttons -->
           <button class="btn btn-success btn-large">Preorder</button>          
@@ -263,6 +263,6 @@
           CC By-Sa 3.0</a>, without all the cruft that would otherwise be put at the bottom of the page.</p>
       </div>
     </div>
-        
+</div>        
   </body>
 </html>
