--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>AnniversaMe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link hret="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css"  >
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+    <link hret="http://fonts.googleapis.com/css?family=Ubuntu:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css"  >
     <style type="text/css">
 
       /* Large Desktop */
@@ -43,10 +43,10 @@
 
       /* Main body and headings  */
       body {
-        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
-        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+        font-family: 'Lato', Helvetica, Arial, sans-serif;
         text-align: center;
       }
       p.lead {
@@ -132,14 +132,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->    
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>AnniversaMe</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One Sentence Description.</p>
+          <p class="lead">Never forget another anniversary or birthday again with personalized reminders and the ability to send greetings via social networks.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -160,7 +160,7 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$0</h3> <p>of $7,000</p>
                 </div>
               </div>
               
@@ -175,8 +175,8 @@
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+              <div class="bar bar-success" style="width: 1%;"></div>
+              <div class="bar bar-warning" style="width: 99%;"></div>
           </div>
         </div>
         <div class="span6 offset3 order">
